# courier_robot

./: .gitattributes  .gitignore  =2.2.0  ARCHITETTURA.md  Dockerfile  README.md  behavioural tree.mmd  build_docker.bat  courier_behavior_tree.mmd  robot.sdf  run_docker.bat  start_container.bat  start_docker.sh  start_first_time.bat  start_simulation.sh
ros2_ws/: .gitignore  =2.2.0  apriltag_marker.sdf  frames_2025-12-19_18.11.15.gv  requirements.txt  robot.sdf  start_docker.sh  start_nav2.sh  start_simulation.sh  test_bfs.py
ros2_ws/src/courier_control/: package.xml  setup.py
ros2_ws/src/courier_control/resource/: courier_control
ros2_ws/src/courier_description/: CMakeLists.txt  package.xml
ros2_ws/src/courier_nav/: BEHAVIOR_TREE.md  README_BEHAVIOR_TREE.md  mission_controller.py  package.xml  setup.cfg  setup.py
ros2_ws/src/courier_nav/config/: nav2_params.yaml
ros2_ws/src/courier_nav/courier_nav/: __init__.py  apriltag_localizer.py  courier_behavior_tree.py  courier_controller.py  nav2_mission_controller.py  nav2_mission_controller.py.backup  nav2_mission_controller_bt.py  world_spawner.py
ros2_ws/src/courier_nav/launch/: cell_navigation.launch.py  courier_mission.launch.py  courier_nav2.launch.py  nav2_bringup.launch.py
ros2_ws/src/courier_nav/maps/: courier_map.pgm  courier_map.yaml  generate_map.py
src/courier_control/: setup.cfg
src/courier_description/launch/: sim.launch.py
src/courier_description/urdf/: courier.urdf.xacro
src/courier_nav/: mission_controller.py  package.xml
src/courier_nav/courier_nav/: courier_behavior_tree.py  world_spawner.py
(+2 files in other folders)
